{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 11,
  "lineage": "ddea0a97-6ece-9dc9-4968-7d2f3e1691a3",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9832711e-0f83-472b-9b12-51273fe866c5/resourceGroups/UmairjResourceGroup/providers/Microsoft.Network/networkInterfaces/UmairjNIC",
            "internal_domain_name_suffix": "yuwcce5zsf3utde3zu5ohnpmza.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9832711e-0f83-472b-9b12-51273fe866c5/resourceGroups/UmairjResourceGroup/providers/Microsoft.Network/publicIPAddresses/UmairjPublicIP",
                "subnet_id": "/subscriptions/9832711e-0f83-472b-9b12-51273fe866c5/resourceGroups/UmairjResourceGroup/providers/Microsoft.Network/virtualNetworks/UmairjVnet/subnets/UmairjSubnet"
              }
            ],
            "location": "eastus",
            "name": "UmairjNIC",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "UmairjResourceGroup"
          },
          "dependencies": [
            "azurerm_public_ip.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9832711e-0f83-472b-9b12-51273fe866c5/resourceGroups/UmairjResourceGroup/providers/Microsoft.Network/networkSecurityGroups/UmairjNSG",
            "location": "eastus",
            "name": "UmairjNSG",
            "resource_group_name": "UmairjResourceGroup",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/9832711e-0f83-472b-9b12-51273fe866c5/resourceGroups/UmairjResourceGroup/providers/Microsoft.Network/networkSecurityGroups/UmairjNSG/securityRules/allowSSH",
            "name": "allowSSH",
            "network_security_group_name": "UmairjNSG",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "UmairjResourceGroup",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/9832711e-0f83-472b-9b12-51273fe866c5/resourceGroups/UmairjResourceGroup/providers/Microsoft.Network/publicIPAddresses/UmairjPublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.87.54.81",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "UmairjPublicIP",
            "resource_group_name": "UmairjResourceGroup",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9832711e-0f83-472b-9b12-51273fe866c5/resourceGroups/UmairjResourceGroup/providers/Microsoft.Network/virtualNetworks/UmairjVnet/subnets/UmairjSubnet",
            "name": "UmairjSubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "UmairjResourceGroup",
            "virtual_network_name": "UmairjVnet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9832711e-0f83-472b-9b12-51273fe866c5/resourceGroups/UmairjResourceGroup/providers/Microsoft.Network/virtualNetworks/UmairjVnet/subnets/UmairjSubnet",
            "network_security_group_id": "/subscriptions/9832711e-0f83-472b-9b12-51273fe866c5/resourceGroups/UmairjResourceGroup/providers/Microsoft.Network/networkSecurityGroups/UmairjNSG",
            "subnet_id": "/subscriptions/9832711e-0f83-472b-9b12-51273fe866c5/resourceGroups/UmairjResourceGroup/providers/Microsoft.Network/virtualNetworks/UmairjVnet/subnets/UmairjSubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "13212cc5-91f9-497b-8c9d-cd3ee3b5ecc8",
            "id": "/subscriptions/9832711e-0f83-472b-9b12-51273fe866c5/resourceGroups/UmairjResourceGroup/providers/Microsoft.Network/virtualNetworks/UmairjVnet",
            "location": "eastus",
            "name": "UmairjVnet",
            "resource_group_name": "UmairjResourceGroup"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}